@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Fix results rows() method to return statement handle rows
 
 0.005     2015-07-28 21:59:23 EDT
   - Allow specifying bind types for query parameters
